--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,47 @@
 version: '3.4'
 
 services:
-  sshd:
-    build: .
-    restart: always
-    volumes:
-      - './ssh/authorized_keys:/root/.ssh/authorized_keys'
-    ports:
-      - '22:22'
-    networks:
-      - samba
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "200k"
-        max-file: "10"
+  # sshd:
+  #   build: .
+  #   restart: always
+  #   volumes:
+  #     - './ssh/authorized_keys:/root/.ssh/authorized_keys:ro'
+  #   ports:
+  #     - '22445:22'
+  #   networks:
+  #     - samba
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #       max-size: "200k"
+  #       max-file: "10"
   samba:
-    image: dperson/samba
+    build: .
     restart: always
     environment:
       TZ: 'EST5EDT'
-    networks:
-      - samba
+    # networks:
+    #   - samba
     expose:
       - 137
       - 138
       - 139
       - 445
-    read_only: true
-    tmpfs:
-      - /tmp
-    restart: unless-stopped
+    ports:
+      - '22445:22'
+    # read_only: true
+    # tmpfs:
+    #   - /tmp
     stdin_open: true
     tty: true
     volumes:
-      - /mnt:/mnt:z
-    command: '-s "Mount;/mnt"'
+      - './data/mnt:/data:z'
+      - './ssh/authorized_keys:/root/.ssh/authorized_keys:ro'
     logging:
       driver: "json-file"
       options:
         max-size: "200k"
         max-file: "10"
 
-networks:
-  samba:
+# networks:
+#   samba:
